--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #FEE4CC;
-    --foreground: #2E2E2E;
+    --background: #FA94A8;
+    --foreground: #5e0787;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Anton;
 }
